@@ -1,3 +1,11 @@
+2009-07-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Rework UTF-16 surrogate
+	pair handling to be more bullet-proof even with incomplete UTF-8
+	sequences.  Add check for 4 byte sequences resulting in values
+	outside the valid Unicode range.  Add a comment to clarify checking
+	for invalid CESU-8 sequences.
+
 2009-07-28  Corinna Vinschen  <corinna@vinschen.de>
 
 	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Fix incrementing n in case
